--- a/results/2021.md
+++ b/results/2021.md
@@ -1,269 +1,330 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 109199
-UNK | 201
-VARZOS | 126
-FLUX | 49
-FLU4 | 47
-PPV | 29
-HEP | 11
-MMR | 11
-PNC13 | 11
-FLUR4 | 9
-HPV9 | 8
-MNQ | 8
-TDAP | 7
-DTAP | 6
-FLU3 | 6
-FLUA4 | 5
-FLUC4 | 4
-FLUA3 | 4
-HEPA | 4
-VARCEL | 4
-DTAPIPVHIB | 4
-MENB | 3
-DTAPHEPBIP | 2
-HIBV | 2
+COVID19 | 220825
+UNK | 667
+VARZOS | 298
+FLU4 | 235
+FLUX | 137
+PPV | 58
+FLUR4 | 32
+PNC13 | 32
+FLUC4 | 31
+MMR | 28
+HPV9 | 26
+TDAP | 23
+FLUA4 | 21
+HEPA | 20
+MNQ | 20
+HEP | 16
+HIBV | 15
+VARCEL | 15
+DTAP | 12
+MENB | 12
+FLUA3 | 11
+DTAPHEPBIP | 11
+MMRV | 9
+FLU3 | 9
+DTAPIPVHIB | 9
+RV5 | 8
+FLUC3 | 6
+DTAPIPV | 4
+HPV4 | 4
+TYP | 4
+ADEN_4_7 | 4
+FLUN4 | 3
+CHOL | 3
+TTOX | 3
+IPV | 3
+RAB | 3
+RV1 | 2
 DT | 2
-TTOX | 2
-HPV4 | 2
-IPV | 2
-TYP | 2
-RV5 | 2
-RV1 | 1
-CHOL | 1
-FLUC3 | 1
+HPVX | 2
 ANTH | 1
 TD | 1
-HPVX | 1
+RVX | 1
 DTP | 1
-ADEN_4_7 | 1
-RAB | 1
-FLUN4 | 1
+DF | 1
 PNC | 1
+HEPAB | 1
+FLUX(H1N1) | 1
 OPV | 1
 YF | 1
+MEN | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 45515
-COVID19-PFIZER\BIONTECH | 38376
-COVID19-JANSSEN | 25158
-UNK-UNKNOWN MANUFACTURER | 201
-COVID19-UNKNOWN MANUFACTURER | 150
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 63
-VARZOS-MERCK & CO. INC. | 57
-FLUX-UNKNOWN MANUFACTURER | 49
-FLU4-SANOFI PASTEUR | 29
-PPV-MERCK & CO. INC. | 24
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 13
-MMR-MERCK & CO. INC. | 11
-PNC13-PFIZER\WYETH | 11
-FLUR4-PROTEIN SCIENCES CORPORATION | 9
-HPV9-MERCK & CO. INC. | 8
-MNQ-SANOFI PASTEUR | 7
-VARZOS-UNKNOWN MANUFACTURER | 6
-FLU3-SANOFI PASTEUR | 6
-FLU4-SEQIRUS, INC. | 5
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
-FLUA4-SEQIRUS, INC. | 5
-PPV-UNKNOWN MANUFACTURER | 5
-FLUC4-SEQIRUS, INC. | 4
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
-TDAP-SANOFI PASTEUR | 4
-VARCEL-MERCK & CO. INC. | 4
-DTAPIPVHIB-SANOFI PASTEUR | 4
+COVID19-MODERNA | 104947
+COVID19-PFIZER\BIONTECH | 81730
+COVID19-JANSSEN | 33411
+COVID19-UNKNOWN MANUFACTURER | 737
+UNK-UNKNOWN MANUFACTURER | 667
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 200
+FLUX-UNKNOWN MANUFACTURER | 137
+FLU4-SANOFI PASTEUR | 131
+VARZOS-MERCK & CO. INC. | 77
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 75
+PPV-MERCK & CO. INC. | 49
+FLUR4-PROTEIN SCIENCES CORPORATION | 32
+PNC13-PFIZER\WYETH | 32
+FLUC4-SEQIRUS, INC. | 31
+FLU4-SEQIRUS, INC. | 29
+MMR-MERCK & CO. INC. | 28
+HPV9-MERCK & CO. INC. | 26
+VARZOS-UNKNOWN MANUFACTURER | 21
+FLUA4-SEQIRUS, INC. | 21
+MNQ-SANOFI PASTEUR | 17
+VARCEL-MERCK & CO. INC. | 15
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 12
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 11
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 11
+TDAP-SANOFI PASTEUR | 11
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 10
+MMRV-MERCK & CO. INC. | 9
+PPV-UNKNOWN MANUFACTURER | 9
+DTAPIPVHIB-SANOFI PASTEUR | 9
+FLU3-SANOFI PASTEUR | 8
+HEPA-MERCK & CO. INC. | 8
+HIBV-MERCK & CO. INC. | 8
+RV5-MERCK & CO. INC. | 8
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 6
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 6
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 6
+MENB-PFIZER\WYETH | 6
+DTAP-SANOFI PASTEUR | 5
+HEP-MERCK & CO. INC. | 5
+HIBV-SANOFI PASTEUR | 4
+HPV4-MERCK & CO. INC. | 4
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 4
+ADEN_4_7-TEVA PHARMACEUTICALS | 4
 HEP-UNKNOWN MANUFACTURER | 3
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2
-DTAP-UNKNOWN MANUFACTURER | 2
+DTAP-UNKNOWN MANUFACTURER | 3
+FLUN4-MEDIMMUNE VACCINES, INC. | 3
+TTOX-UNKNOWN MANUFACTURER | 3
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 3
+IPV-SANOFI PASTEUR | 3
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 3
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 2
+DTAPIPV-SANOFI PASTEUR | 2
 DT-UNKNOWN MANUFACTURER | 2
-TTOX-UNKNOWN MANUFACTURER | 2
-HPV4-MERCK & CO. INC. | 2
-HEPA-MERCK & CO. INC. | 2
-DTAP-SANOFI PASTEUR | 2
-HEP-MERCK & CO. INC. | 2
-IPV-SANOFI PASTEUR | 2
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 2
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 2
-RV5-MERCK & CO. INC. | 2
-MENB-PFIZER\WYETH | 2
-HIBV-SANOFI PASTEUR | 1
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 1
+CHOL-PAXVAX | 2
+TDAP-UNKNOWN MANUFACTURER | 2
+TYP-SANOFI PASTEUR | 2
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 2
+TYP-BERNA BIOTECH, LTD. | 2
+HPVX-UNKNOWN MANUFACTURER | 2
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 2
+HIBV-UNKNOWN MANUFACTURER | 2
 CHOL-UNKNOWN MANUFACTURER | 1
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1
-TDAP-UNKNOWN MANUFACTURER | 1
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
-TYP-SANOFI PASTEUR | 1
+FLU3-CSL LIMITED | 1
 TD-UNKNOWN MANUFACTURER | 1
-HPVX-UNKNOWN MANUFACTURER | 1
+RVX-UNKNOWN MANUFACTURER | 1
 DTP-UNKNOWN MANUFACTURER | 1
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
-ADEN_4_7-TEVA PHARMACEUTICALS | 1
-HIBV-MERCK & CO. INC. | 1
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
-FLUN4-MEDIMMUNE VACCINES, INC. | 1
+DF-SANOFI PASTEUR | 1
 PNC-PFIZER\WYETH | 1
-TYP-BERNA BIOTECH, LTD. | 1
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 1
 OPV-UNKNOWN MANUFACTURER | 1
 YF-SANOFI PASTEUR | 1
+MEN-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 3591
-UNK | 29
-FLU4 | 8
-VARZOS | 8
-FLUX | 7
+COVID19 | 4323
+UNK | 86
+VARZOS | 14
+FLUX | 11
+FLU4 | 10
+HEP | 5
 PPV | 5
-HEP | 2
-HEPA | 1
+HIBV | 3
+PNC13 | 3
+HEPA | 2
+TDAP | 2
+DTAP | 2
+RAB | 2
+RV5 | 2
+MMRV | 2
 MMR | 1
 VARCEL | 1
-TDAP | 1
-DTAP | 1
-HIBV | 1
-PNC13 | 1
-RAB | 1
+DTAPHEPBIP | 1
+MENB | 1
+FLUR4 | 1
+MNQ | 1
+MEN | 1
+FLUC4 | 1
+DTAPIPVHIB | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-MODERNA | 1759
-COVID19-PFIZER\BIONTECH | 1590
-COVID19-JANSSEN | 223
-UNK-UNKNOWN MANUFACTURER | 29
-COVID19-UNKNOWN MANUFACTURER | 19
-FLU4-SANOFI PASTEUR | 8
-FLUX-UNKNOWN MANUFACTURER | 7
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 5
+COVID19-MODERNA | 2078
+COVID19-PFIZER\BIONTECH | 1894
+COVID19-JANSSEN | 329
+UNK-UNKNOWN MANUFACTURER | 86
+COVID19-UNKNOWN MANUFACTURER | 22
+FLUX-UNKNOWN MANUFACTURER | 11
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10
+FLU4-SANOFI PASTEUR | 9
+VARZOS-MERCK & CO. INC. | 4
 PPV-MERCK & CO. INC. | 4
-VARZOS-MERCK & CO. INC. | 3
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1
+PNC13-PFIZER\WYETH | 3
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 2
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 2
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+HIBV-SANOFI PASTEUR | 2
+RV5-MERCK & CO. INC. | 2
+MMRV-MERCK & CO. INC. | 2
+HEP-MERCK & CO. INC. | 2
 MMR-MERCK & CO. INC. | 1
 VARCEL-MERCK & CO. INC. | 1
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 1
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 HIBV-MERCK & CO. INC. | 1
-PNC13-PFIZER\WYETH | 1
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 PPV-UNKNOWN MANUFACTURER | 1
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1
+MENB-PFIZER\WYETH | 1
+FLUR4-PROTEIN SCIENCES CORPORATION | 1
+MNQ-SANOFI PASTEUR | 1
+TDAP-UNKNOWN MANUFACTURER | 1
+MEN-UNKNOWN MANUFACTURER | 1
+FLUC4-SEQIRUS, INC. | 1
+DTAP-SANOFI PASTEUR | 1
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1
+DTAPIPVHIB-SANOFI PASTEUR | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 501857
-UNK | 981
-VARZOS | 506
-FLU4 | 258
-FLUX | 216
-PPV | 152
-HEP | 104
-MMR | 77
-PNC13 | 52
-FLUR4 | 46
-HEPA | 39
-VARCEL | 39
-FLUA4 | 37
-TDAP | 36
-HPV9 | 35
-MNQ | 30
-FLUA3 | 30
-HPVX | 27
-HPV4 | 24
-MENB | 22
-DTAPHEPBIP | 17
-HIBV | 16
-FLU3 | 15
-FLUC4 | 15
-DTAP | 14
-RV1 | 13
+COVID19 | 985822
+UNK | 3094
+VARZOS | 1203
+FLU4 | 932
+FLUX | 473
+PPV | 288
+MMR | 174
+PNC13 | 173
+HEP | 135
+HPV9 | 133
+FLUR4 | 117
+FLUC4 | 112
+HEPA | 108
+VARCEL | 108
+TDAP | 95
+FLUA4 | 94
+MNQ | 78
+HIBV | 74
+HPV4 | 62
+DTAPHEPBIP | 57
+DTAPIPVHIB | 54
+FLUA3 | 48
+MENB | 43
+MMRV | 42
+HPVX | 38
+FLUN4 | 37
+DTAP | 31
+RAB | 30
+RV5 | 29
+DTAPIPV | 23
+FLU3 | 23
+FLUC3 | 21
+IPV | 18
+RV1 | 17
+ADEN_4_7 | 13
 DT | 12
+TYP | 10
+DF | 10
 OPV | 10
 YF | 10
-DTAPIPVHIB | 9
-FLUC3 | 8
-TYP | 7
-RV5 | 7
-TTOX | 6
-FLUN4 | 6
-IPV | 5
+TTOX | 7
+CHOL | 6
+RVX | 6
 ANTH | 4
 TD | 3
-CHOL | 2
-ADEN_4_7 | 2
-RAB | 2
 PNC | 2
+HEPAB | 2
+FLUX(H1N1) | 2
 DTP | 1
+MEN | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 203281
-COVID19-PFIZER\BIONTECH | 176530
-COVID19-JANSSEN | 121278
-UNK-UNKNOWN MANUFACTURER | 981
-COVID19-UNKNOWN MANUFACTURER | 768
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 322
-FLUX-UNKNOWN MANUFACTURER | 216
-FLU4-SANOFI PASTEUR | 178
-VARZOS-MERCK & CO. INC. | 157
-PPV-MERCK & CO. INC. | 144
-MMR-MERCK & CO. INC. | 77
+COVID19-MODERNA | 464688
+COVID19-PFIZER\BIONTECH | 357983
+COVID19-JANSSEN | 159847
+COVID19-UNKNOWN MANUFACTURER | 3304
+UNK-UNKNOWN MANUFACTURER | 3094
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 918
+FLU4-SANOFI PASTEUR | 516
+FLUX-UNKNOWN MANUFACTURER | 473
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 301
+PPV-MERCK & CO. INC. | 263
+VARZOS-MERCK & CO. INC. | 205
+MMR-MERCK & CO. INC. | 174
+PNC13-PFIZER\WYETH | 173
+HPV9-MERCK & CO. INC. | 133
+FLUR4-PROTEIN SCIENCES CORPORATION | 117
+FLU4-SEQIRUS, INC. | 115
+FLUC4-SEQIRUS, INC. | 112
+VARCEL-MERCK & CO. INC. | 108
+FLUA4-SEQIRUS, INC. | 94
+VARZOS-UNKNOWN MANUFACTURER | 80
 HEP-UNKNOWN MANUFACTURER | 69
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 65
-PNC13-PFIZER\WYETH | 52
-FLUR4-PROTEIN SCIENCES CORPORATION | 46
-VARCEL-MERCK & CO. INC. | 39
-FLUA4-SEQIRUS, INC. | 37
-HPV9-MERCK & CO. INC. | 35
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 30
-VARZOS-UNKNOWN MANUFACTURER | 27
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 27
-HPVX-UNKNOWN MANUFACTURER | 27
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 26
-MNQ-SANOFI PASTEUR | 25
-TDAP-SANOFI PASTEUR | 25
-HPV4-MERCK & CO. INC. | 24
-MENB-PFIZER\WYETH | 20
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 17
-FLU4-SEQIRUS, INC. | 15
-FLU3-SANOFI PASTEUR | 15
-FLUC4-SEQIRUS, INC. | 15
-HIBV-SANOFI PASTEUR | 13
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 13
-HEPA-MERCK & CO. INC. | 13
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 68
+MNQ-SANOFI PASTEUR | 68
+HPV4-MERCK & CO. INC. | 62
+TDAP-SANOFI PASTEUR | 60
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 57
+DTAPIPVHIB-SANOFI PASTEUR | 54
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 48
+MMRV-MERCK & CO. INC. | 42
+HIBV-MERCK & CO. INC. | 42
+HEPA-MERCK & CO. INC. | 40
+HPVX-UNKNOWN MANUFACTURER | 38
+FLUN4-MEDIMMUNE VACCINES, INC. | 37
+MENB-PFIZER\WYETH | 31
+HEP-MERCK & CO. INC. | 30
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 30
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 29
+RV5-MERCK & CO. INC. | 29
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 25
+PPV-UNKNOWN MANUFACTURER | 25
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 21
+FLU3-SANOFI PASTEUR | 19
+HIBV-SANOFI PASTEUR | 18
+IPV-SANOFI PASTEUR | 18
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 17
+DTAPIPV-SANOFI PASTEUR | 17
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 15
+DTAP-SANOFI PASTEUR | 13
+ADEN_4_7-TEVA PHARMACEUTICALS | 13
+HIBV-UNKNOWN MANUFACTURER | 13
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 12
 DT-UNKNOWN MANUFACTURER | 12
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 10
+TDAP-UNKNOWN MANUFACTURER | 10
+DF-SANOFI PASTEUR | 10
 OPV-UNKNOWN MANUFACTURER | 10
 YF-SANOFI PASTEUR | 10
-DTAPIPVHIB-SANOFI PASTEUR | 9
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 8
-TDAP-UNKNOWN MANUFACTURER | 8
-PPV-UNKNOWN MANUFACTURER | 8
-HEP-MERCK & CO. INC. | 7
-RV5-MERCK & CO. INC. | 7
-TTOX-UNKNOWN MANUFACTURER | 6
-DTAP-SANOFI PASTEUR | 6
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 6
-FLUN4-MEDIMMUNE VACCINES, INC. | 6
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 5
-IPV-SANOFI PASTEUR | 5
+TTOX-UNKNOWN MANUFACTURER | 7
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 7
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 6
+RVX-UNKNOWN MANUFACTURER | 6
+TYP-SANOFI PASTEUR | 5
+TYP-BERNA BIOTECH, LTD. | 5
+CHOL-PAXVAX | 4
 ANTH-EMERGENT BIOSOLUTIONS | 4
-TYP-SANOFI PASTEUR | 4
+FLU3-CSL LIMITED | 4
+DTAP-UNKNOWN MANUFACTURER | 3
 TD-UNKNOWN MANUFACTURER | 3
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 3
-HIBV-MERCK & CO. INC. | 3
-TYP-BERNA BIOTECH, LTD. | 3
-DTAP-UNKNOWN MANUFACTURER | 2
 CHOL-UNKNOWN MANUFACTURER | 2
-ADEN_4_7-TEVA PHARMACEUTICALS | 2
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 PNC-PFIZER\WYETH | 2
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 2
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 2
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTP-UNKNOWN MANUFACTURER | 1
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
+MEN-UNKNOWN MANUFACTURER | 1
 ---
