--- a/results/2021.md
+++ b/results/2021.md
@@ -1,153 +1,173 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 220825
-UNK | 667
-VARZOS | 298
-FLU4 | 235
-FLUX | 137
-PPV | 58
-FLUR4 | 32
-PNC13 | 32
-FLUC4 | 31
-MMR | 28
-HPV9 | 26
-TDAP | 23
-FLUA4 | 21
-HEPA | 20
-MNQ | 20
-HEP | 16
-HIBV | 15
-VARCEL | 15
-DTAP | 12
-MENB | 12
-FLUA3 | 11
-DTAPHEPBIP | 11
-MMRV | 9
-FLU3 | 9
-DTAPIPVHIB | 9
-RV5 | 8
-FLUC3 | 6
-DTAPIPV | 4
-HPV4 | 4
-TYP | 4
-ADEN_4_7 | 4
-FLUN4 | 3
-CHOL | 3
-TTOX | 3
-IPV | 3
-RAB | 3
-RV1 | 2
-DT | 2
-HPVX | 2
-ANTH | 1
+COVID19 | 354451
+UNK | 1459
+VARZOS | 567
+FLU4 | 397
+FLUX | 173
+FLUC4 | 154
+PNC13 | 89
+PPV | 89
+HPV9 | 66
+FLUA4 | 64
+TDAP | 61
+MMR | 53
+MNQ | 49
+HEPA | 48
+FLUR4 | 47
+VARCEL | 45
+HIBV | 40
+HEP | 34
+FLUA3 | 30
+MENB | 30
+DTAP | 29
+MMRV | 27
+DTAPIPVHIB | 25
+RV5 | 23
+DTAPHEPBIP | 21
+DTAPIPV | 20
+FLU3 | 13
+FLUC3 | 11
+HPV4 | 10
+ANTH | 8
+IPV | 8
+TYP | 8
+ADEN_4_7 | 8
+RV1 | 7
+RAB | 6
+FLUN4 | 5
+TTOX | 5
+CHOL | 4
+HEPAB | 4
+DT | 3
+HPVX | 3
+DF | 3
+EBZR | 2
+RVX | 2
+FLUX(H1N1) | 2
+MEN | 2
+YF | 2
+JEV1 | 2
 TD | 1
-RVX | 1
 DTP | 1
-DF | 1
 PNC | 1
-HEPAB | 1
-FLUX(H1N1) | 1
 OPV | 1
-YF | 1
-MEN | 1
+MENHIB | 1
+FLUN3 | 1
+SMALL | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 104947
-COVID19-PFIZER\BIONTECH | 81730
-COVID19-JANSSEN | 33411
-COVID19-UNKNOWN MANUFACTURER | 737
-UNK-UNKNOWN MANUFACTURER | 667
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 200
-FLUX-UNKNOWN MANUFACTURER | 137
-FLU4-SANOFI PASTEUR | 131
-VARZOS-MERCK & CO. INC. | 77
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 75
-PPV-MERCK & CO. INC. | 49
-FLUR4-PROTEIN SCIENCES CORPORATION | 32
-PNC13-PFIZER\WYETH | 32
-FLUC4-SEQIRUS, INC. | 31
-FLU4-SEQIRUS, INC. | 29
-MMR-MERCK & CO. INC. | 28
-HPV9-MERCK & CO. INC. | 26
-VARZOS-UNKNOWN MANUFACTURER | 21
-FLUA4-SEQIRUS, INC. | 21
-MNQ-SANOFI PASTEUR | 17
-VARCEL-MERCK & CO. INC. | 15
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 12
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 11
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 11
-TDAP-SANOFI PASTEUR | 11
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 10
-MMRV-MERCK & CO. INC. | 9
-PPV-UNKNOWN MANUFACTURER | 9
-DTAPIPVHIB-SANOFI PASTEUR | 9
-FLU3-SANOFI PASTEUR | 8
-HEPA-MERCK & CO. INC. | 8
-HIBV-MERCK & CO. INC. | 8
-RV5-MERCK & CO. INC. | 8
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 6
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 6
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 6
-MENB-PFIZER\WYETH | 6
-DTAP-SANOFI PASTEUR | 5
-HEP-MERCK & CO. INC. | 5
-HIBV-SANOFI PASTEUR | 4
-HPV4-MERCK & CO. INC. | 4
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 4
-ADEN_4_7-TEVA PHARMACEUTICALS | 4
-HEP-UNKNOWN MANUFACTURER | 3
-DTAP-UNKNOWN MANUFACTURER | 3
-FLUN4-MEDIMMUNE VACCINES, INC. | 3
-TTOX-UNKNOWN MANUFACTURER | 3
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 3
-IPV-SANOFI PASTEUR | 3
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 3
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 2
-DTAPIPV-SANOFI PASTEUR | 2
-DT-UNKNOWN MANUFACTURER | 2
-CHOL-PAXVAX | 2
-TDAP-UNKNOWN MANUFACTURER | 2
+COVID19-MODERNA | 165407
+COVID19-PFIZER\BIONTECH | 148696
+COVID19-JANSSEN | 39433
+UNK-UNKNOWN MANUFACTURER | 1459
+COVID19-UNKNOWN MANUFACTURER | 915
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 301
+FLU4-SANOFI PASTEUR | 207
+FLUX-UNKNOWN MANUFACTURER | 172
+FLUC4-SEQIRUS, INC. | 154
+VARZOS-UNKNOWN MANUFACTURER | 153
+VARZOS-MERCK & CO. INC. | 113
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 102
+PNC13-PFIZER\WYETH | 89
+FLU4-SEQIRUS, INC. | 88
+PPV-MERCK & CO. INC. | 76
+HPV9-MERCK & CO. INC. | 66
+FLUA4-SEQIRUS, INC. | 64
+MMR-MERCK & CO. INC. | 52
+FLUR4-PROTEIN SCIENCES CORPORATION | 47
+VARCEL-MERCK & CO. INC. | 45
+MNQ-SANOFI PASTEUR | 35
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 30
+TDAP-SANOFI PASTEUR | 30
+MMRV-MERCK & CO. INC. | 27
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 26
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 26
+DTAPIPVHIB-SANOFI PASTEUR | 25
+RV5-MERCK & CO. INC. | 23
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 21
+HEPA-MERCK & CO. INC. | 21
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 20
+HIBV-SANOFI PASTEUR | 18
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 15
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 14
+PPV-UNKNOWN MANUFACTURER | 13
+HIBV-MERCK & CO. INC. | 13
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 13
+DTAP-SANOFI PASTEUR | 11
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 11
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 11
+HPV4-MERCK & CO. INC. | 10
+MENB-PFIZER\WYETH | 10
+DTAPIPV-SANOFI PASTEUR | 9
+FLU3-SANOFI PASTEUR | 9
+HEP-MERCK & CO. INC. | 9
+ADEN_4_7-TEVA PHARMACEUTICALS | 8
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 7
+IPV-SANOFI PASTEUR | 7
+ANTH-EMERGENT BIOSOLUTIONS | 6
+TYP-BERNA BIOTECH, LTD. | 6
+HEP-UNKNOWN MANUFACTURER | 5
+DTAP-UNKNOWN MANUFACTURER | 5
+FLUN4-MEDIMMUNE VACCINES, INC. | 5
+TTOX-UNKNOWN MANUFACTURER | 5
+TDAP-UNKNOWN MANUFACTURER | 5
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 5
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 5
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 5
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 4
+HIBV-UNKNOWN MANUFACTURER | 4
+CHOL-PAXVAX | 3
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 3
+HPVX-UNKNOWN MANUFACTURER | 3
+DF-SANOFI PASTEUR | 3
 TYP-SANOFI PASTEUR | 2
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 2
-TYP-BERNA BIOTECH, LTD. | 2
-HPVX-UNKNOWN MANUFACTURER | 2
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 2
-HIBV-UNKNOWN MANUFACTURER | 2
+EBZR-MERCK & CO. INC. | 2
+RVX-UNKNOWN MANUFACTURER | 2
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 2
+ANTH-UNKNOWN MANUFACTURER | 2
+DT-SANOFI PASTEUR | 2
+MEN-UNKNOWN MANUFACTURER | 2
+YF-SANOFI PASTEUR | 2
+JEV1-INTERCELL AG | 2
 CHOL-UNKNOWN MANUFACTURER | 1
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
-ANTH-EMERGENT BIOSOLUTIONS | 1
+DT-UNKNOWN MANUFACTURER | 1
 FLU3-CSL LIMITED | 1
 TD-UNKNOWN MANUFACTURER | 1
-RVX-UNKNOWN MANUFACTURER | 1
 DTP-UNKNOWN MANUFACTURER | 1
-DF-SANOFI PASTEUR | 1
+IPV-UNKNOWN MANUFACTURER | 1
 PNC-PFIZER\WYETH | 1
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 1
+RAB-UNKNOWN MANUFACTURER | 1
 OPV-UNKNOWN MANUFACTURER | 1
-YF-SANOFI PASTEUR | 1
-MEN-UNKNOWN MANUFACTURER | 1
+HEPA-UNKNOWN MANUFACTURER | 1
+MMR-UNKNOWN MANUFACTURER | 1
+MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
+FLUX-SANOFI PASTEUR | 1
+FLUN3-MEDIMMUNE VACCINES, INC. | 1
+SMALL-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 4323
-UNK | 86
-VARZOS | 14
+COVID19 | 5062
+UNK | 107
+VARZOS | 15
 FLUX | 11
 FLU4 | 10
+PPV | 6
+PNC13 | 6
 HEP | 5
-PPV | 5
-HIBV | 3
-PNC13 | 3
-HEPA | 2
+HIBV | 4
+HEPA | 3
+DTAP | 3
+DTAPIPVHIB | 3
 TDAP | 2
-DTAP | 2
 RAB | 2
 RV5 | 2
 MMRV | 2
+HPV9 | 2
 MMR | 1
 VARCEL | 1
 DTAPHEPBIP | 1
@@ -156,28 +176,31 @@ FLUR4 | 1
 MNQ | 1
 MEN | 1
 FLUC4 | 1
-DTAPIPVHIB | 1
+RV1 | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-MODERNA | 2078
-COVID19-PFIZER\BIONTECH | 1894
-COVID19-JANSSEN | 329
-UNK-UNKNOWN MANUFACTURER | 86
-COVID19-UNKNOWN MANUFACTURER | 22
+COVID19-MODERNA | 2393
+COVID19-PFIZER\BIONTECH | 2227
+COVID19-JANSSEN | 417
+UNK-UNKNOWN MANUFACTURER | 107
+COVID19-UNKNOWN MANUFACTURER | 25
 FLUX-UNKNOWN MANUFACTURER | 11
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10
 FLU4-SANOFI PASTEUR | 9
+PNC13-PFIZER\WYETH | 6
+PPV-MERCK & CO. INC. | 5
 VARZOS-MERCK & CO. INC. | 4
-PPV-MERCK & CO. INC. | 4
-PNC13-PFIZER\WYETH | 3
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 2
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3
+DTAPIPVHIB-SANOFI PASTEUR | 3
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 2
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 HIBV-SANOFI PASTEUR | 2
 RV5-MERCK & CO. INC. | 2
 MMRV-MERCK & CO. INC. | 2
+DTAP-SANOFI PASTEUR | 2
 HEP-MERCK & CO. INC. | 2
+HPV9-MERCK & CO. INC. | 2
 MMR-MERCK & CO. INC. | 1
 VARCEL-MERCK & CO. INC. | 1
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
@@ -192,139 +215,158 @@ MNQ-SANOFI PASTEUR | 1
 TDAP-UNKNOWN MANUFACTURER | 1
 MEN-UNKNOWN MANUFACTURER | 1
 FLUC4-SEQIRUS, INC. | 1
-DTAP-SANOFI PASTEUR | 1
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1
-DTAPIPVHIB-SANOFI PASTEUR | 1
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
+VARZOS-UNKNOWN MANUFACTURER | 1
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 985822
-UNK | 3094
-VARZOS | 1203
-FLU4 | 932
-FLUX | 473
-PPV | 288
-MMR | 174
-PNC13 | 173
-HEP | 135
-HPV9 | 133
-FLUR4 | 117
-FLUC4 | 112
-HEPA | 108
-VARCEL | 108
-TDAP | 95
-FLUA4 | 94
-MNQ | 78
-HIBV | 74
-HPV4 | 62
-DTAPHEPBIP | 57
-DTAPIPVHIB | 54
-FLUA3 | 48
-MENB | 43
-MMRV | 42
-HPVX | 38
-FLUN4 | 37
-DTAP | 31
-RAB | 30
-RV5 | 29
-DTAPIPV | 23
-FLU3 | 23
-FLUC3 | 21
-IPV | 18
-RV1 | 17
-ADEN_4_7 | 13
-DT | 12
-TYP | 10
-DF | 10
+COVID19 | 1553295
+UNK | 7036
+VARZOS | 2177
+FLU4 | 1528
+FLUC4 | 574
+FLUX | 539
+HPV9 | 530
+PNC13 | 523
+PPV | 426
+FLUA4 | 313
+TDAP | 272
+MMR | 271
+VARCEL | 262
+HIBV | 237
+HEP | 230
+HEPA | 227
+MNQ | 216
+DTAPIPVHIB | 182
+DTAP | 160
+DTAPHEPBIP | 158
+RV5 | 144
+FLUR4 | 143
+MENB | 141
+HPV4 | 136
+MMRV | 110
+RV1 | 105
+DTAPIPV | 101
+FLUA3 | 100
+RAB | 48
+IPV | 45
+ANTH | 44
+FLUN4 | 40
+HPVX | 39
+ADEN_4_7 | 37
+FLUC3 | 34
+RVX | 33
+FLU3 | 28
+DF | 17
+TYP | 15
+JEV1 | 11
+DT | 10
+TTOX | 10
+EBZR | 10
 OPV | 10
 YF | 10
-TTOX | 7
-CHOL | 6
-RVX | 6
-ANTH | 4
+CHOL | 8
+HEPAB | 7
+FLUX(H1N1) | 4
 TD | 3
+MEN | 3
 PNC | 2
-HEPAB | 2
-FLUX(H1N1) | 2
+SMALL | 2
 DTP | 1
-MEN | 1
+MENHIB | 1
+FLUN3 | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 464688
-COVID19-PFIZER\BIONTECH | 357983
-COVID19-JANSSEN | 159847
-COVID19-UNKNOWN MANUFACTURER | 3304
-UNK-UNKNOWN MANUFACTURER | 3094
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 918
-FLU4-SANOFI PASTEUR | 516
-FLUX-UNKNOWN MANUFACTURER | 473
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 301
-PPV-MERCK & CO. INC. | 263
-VARZOS-MERCK & CO. INC. | 205
-MMR-MERCK & CO. INC. | 174
-PNC13-PFIZER\WYETH | 173
-HPV9-MERCK & CO. INC. | 133
-FLUR4-PROTEIN SCIENCES CORPORATION | 117
-FLU4-SEQIRUS, INC. | 115
-FLUC4-SEQIRUS, INC. | 112
-VARCEL-MERCK & CO. INC. | 108
-FLUA4-SEQIRUS, INC. | 94
-VARZOS-UNKNOWN MANUFACTURER | 80
-HEP-UNKNOWN MANUFACTURER | 69
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 68
-MNQ-SANOFI PASTEUR | 68
-HPV4-MERCK & CO. INC. | 62
-TDAP-SANOFI PASTEUR | 60
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 57
-DTAPIPVHIB-SANOFI PASTEUR | 54
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 48
-MMRV-MERCK & CO. INC. | 42
-HIBV-MERCK & CO. INC. | 42
-HEPA-MERCK & CO. INC. | 40
-HPVX-UNKNOWN MANUFACTURER | 38
-FLUN4-MEDIMMUNE VACCINES, INC. | 37
-MENB-PFIZER\WYETH | 31
-HEP-MERCK & CO. INC. | 30
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 30
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 29
-RV5-MERCK & CO. INC. | 29
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 25
-PPV-UNKNOWN MANUFACTURER | 25
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 21
-FLU3-SANOFI PASTEUR | 19
-HIBV-SANOFI PASTEUR | 18
-IPV-SANOFI PASTEUR | 18
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 17
-DTAPIPV-SANOFI PASTEUR | 17
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 15
-DTAP-SANOFI PASTEUR | 13
-ADEN_4_7-TEVA PHARMACEUTICALS | 13
-HIBV-UNKNOWN MANUFACTURER | 13
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 12
-DT-UNKNOWN MANUFACTURER | 12
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 10
-TDAP-UNKNOWN MANUFACTURER | 10
-DF-SANOFI PASTEUR | 10
+COVID19-MODERNA | 728916
+COVID19-PFIZER\BIONTECH | 632065
+COVID19-JANSSEN | 188106
+UNK-UNKNOWN MANUFACTURER | 7036
+COVID19-UNKNOWN MANUFACTURER | 4208
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 1378
+FLU4-SANOFI PASTEUR | 802
+FLUC4-SEQIRUS, INC. | 574
+FLUX-UNKNOWN MANUFACTURER | 538
+HPV9-MERCK & CO. INC. | 530
+PNC13-PFIZER\WYETH | 523
+VARZOS-UNKNOWN MANUFACTURER | 455
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 406
+PPV-MERCK & CO. INC. | 391
+VARZOS-MERCK & CO. INC. | 344
+FLU4-SEQIRUS, INC. | 320
+FLUA4-SEQIRUS, INC. | 313
+MMR-MERCK & CO. INC. | 267
+VARCEL-MERCK & CO. INC. | 262
+DTAPIPVHIB-SANOFI PASTEUR | 182
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 158
+MNQ-SANOFI PASTEUR | 151
+TDAP-SANOFI PASTEUR | 150
+RV5-MERCK & CO. INC. | 144
+FLUR4-PROTEIN SCIENCES CORPORATION | 143
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 139
+HIBV-SANOFI PASTEUR | 137
+HPV4-MERCK & CO. INC. | 136
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 112
+MMRV-MERCK & CO. INC. | 110
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 105
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 100
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 92
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 89
+HEP-UNKNOWN MANUFACTURER | 86
+HEPA-MERCK & CO. INC. | 84
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 68
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 65
+HEP-MERCK & CO. INC. | 61
+HIBV-MERCK & CO. INC. | 56
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 51
+DTAPIPV-SANOFI PASTEUR | 50
+MENB-PFIZER\WYETH | 49
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 45
+FLUN4-MEDIMMUNE VACCINES, INC. | 40
+HPVX-UNKNOWN MANUFACTURER | 39
+IPV-SANOFI PASTEUR | 38
+DTAP-SANOFI PASTEUR | 37
+ANTH-EMERGENT BIOSOLUTIONS | 37
+ADEN_4_7-TEVA PHARMACEUTICALS | 37
+PPV-UNKNOWN MANUFACTURER | 35
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 34
+TDAP-UNKNOWN MANUFACTURER | 33
+RVX-UNKNOWN MANUFACTURER | 33
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 23
+HIBV-UNKNOWN MANUFACTURER | 21
+FLU3-SANOFI PASTEUR | 20
+DF-SANOFI PASTEUR | 17
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 15
+DTAP-UNKNOWN MANUFACTURER | 11
+JEV1-INTERCELL AG | 11
+TTOX-UNKNOWN MANUFACTURER | 10
+EBZR-MERCK & CO. INC. | 10
+TYP-BERNA BIOTECH, LTD. | 10
 OPV-UNKNOWN MANUFACTURER | 10
 YF-SANOFI PASTEUR | 10
-TTOX-UNKNOWN MANUFACTURER | 7
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 7
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 6
-RVX-UNKNOWN MANUFACTURER | 6
+DT-SANOFI PASTEUR | 8
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 7
+IPV-UNKNOWN MANUFACTURER | 7
+ANTH-UNKNOWN MANUFACTURER | 7
+CHOL-PAXVAX | 6
 TYP-SANOFI PASTEUR | 5
-TYP-BERNA BIOTECH, LTD. | 5
-CHOL-PAXVAX | 4
-ANTH-EMERGENT BIOSOLUTIONS | 4
 FLU3-CSL LIMITED | 4
-DTAP-UNKNOWN MANUFACTURER | 3
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 4
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 4
+HEPA-UNKNOWN MANUFACTURER | 4
+MMR-UNKNOWN MANUFACTURER | 4
 TD-UNKNOWN MANUFACTURER | 3
+RAB-UNKNOWN MANUFACTURER | 3
+MEN-UNKNOWN MANUFACTURER | 3
 CHOL-UNKNOWN MANUFACTURER | 2
+DT-UNKNOWN MANUFACTURER | 2
 PNC-PFIZER\WYETH | 2
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 2
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 2
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
+SMALL-UNKNOWN MANUFACTURER | 2
 DTP-UNKNOWN MANUFACTURER | 1
-MEN-UNKNOWN MANUFACTURER | 1
+MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
+FLUX-SANOFI PASTEUR | 1
+FLUN3-MEDIMMUNE VACCINES, INC. | 1
 ---
